--- a/CheckYourEligibility-Admin/Views/Application/PaginationPartial.cshtml
+++ b/CheckYourEligibility-Admin/Views/Application/PaginationPartial.cshtml
@@ -1,10 +1,11 @@
 ﻿@model CheckYourEligibility_FrontEnd.ViewModels.PaginationPartialViewModel
+@using CheckYourEligibility_FrontEnd.Models
 
 <nav class="govuk-pagination" aria-label="Pagination">
     @if (Model.CurrentPage > 1)
     {
         <div class="govuk-pagination__prev">
-            <a class="govuk-link govuk-pagination__link" href="@Url.Action(Model.ControllerName, new { PageNumber = Model.CurrentPage - 1 , Keyword = Model.Keyword, Status = Model.Status})" rel="prev">
+            <a class="govuk-link govuk-pagination__link" href="@Url.Action(Model.ControllerName, new { PageNumber = Model.CurrentPage - 1 , Keyword = Model.Keyword, Status = Model.Status})@(Model.DateFrom == null ? "" : $"&DateRange.DateFrom={Model.DateFrom}")" rel="prev">
                 <svg class="govuk-pagination__icon govuk-pagination__icon--prev" xmlns="http://www.w3.org/2000/svg" height="13" width="15" aria-hidden="true" focusable="false" viewBox="0 0 15 13">
                     <path d="m6.5938-0.0078125-6.7266 6.7266 6.7441 6.4062 1.377-1.449-4.1856-3.9768h12.896v-2h-12.984l4.2931-4.293-1.414-1.414z"></path>
                 </svg>
@@ -17,7 +18,7 @@
 
     <ul class="govuk-pagination__list">
         <li class="govuk-pagination__item @(Model.CurrentPage == 1 ? "govuk-pagination__item--current" : "")">
-            <a class="govuk-link govuk-pagination__link" href="@Url.Action(Model.ControllerName, new { PageNumber = 1 , Keyword = Model.Keyword, Status = Model.Status})" aria-label="Page 1" @(Model.CurrentPage == 1 ? "aria-current=\"page\"" : "")>1</a>
+            <a class="govuk-link govuk-pagination__link" href="@Url.Action(Model.ControllerName, new { PageNumber = 1 , Keyword = Model.Keyword, Status = Model.Status})@(Model.DateFrom == null ? "" : $"&DateRange.DateFrom={Model.DateFrom}")" aria-label="Page 1" @(Model.CurrentPage == 1 ? "aria-current=\"page\"" : "")>1</a>
         </li>
         @if (Model.CurrentPage > 3)
         {
@@ -27,7 +28,7 @@
         @for (int i = Math.Max(2, Model.CurrentPage - 1); i <= Math.Min(Model.TotalPages - 1, Model.CurrentPage + 1); i++)
         {
             <li class="govuk-pagination__item @(Model.CurrentPage == i ? "govuk-pagination__item--current" : "")">
-                <a class="govuk-link govuk-pagination__link" href="@Url.Action(Model.ControllerName, new { PageNumber = i , Keyword = Model.Keyword, Status = Model.Status})" aria-label="Page @i" @(Model.CurrentPage == i ? "aria-current=\"page\"" : "")>@i</a>
+                <a class="govuk-link govuk-pagination__link" href="@Url.Action(Model.ControllerName, new { PageNumber = i , Keyword = Model.Keyword, Status = Model.Status})@(Model.DateFrom == null ? "" : $"&DateRange.DateFrom={Model.DateFrom}")" aria-label="Page @i" @(Model.CurrentPage == i ? "aria-current=\"page\"" : "")>@i</a>
             </li>
         }
 
@@ -37,14 +38,14 @@
         }
 
         <li class="govuk-pagination__item @(Model.CurrentPage == Model.TotalPages ? "govuk-pagination__item--current" : "")">
-            <a class="govuk-link govuk-pagination__link" href="@Url.Action(Model.ControllerName, new { PageNumber = Model.TotalPages , Keyword = Model.Keyword, Status = Model.Status})" aria-label="Page @Model.TotalPages" @(Model.CurrentPage == Model.TotalPages ? "aria-current=\"page\"" : "")>@Model.TotalPages</a>
+            <a class="govuk-link govuk-pagination__link" href="@Url.Action(Model.ControllerName, new { PageNumber = Model.TotalPages , Keyword = Model.Keyword, Status = Model.Status})@(Model.DateFrom == null ? "" : $"&DateRange.DateFrom={Model.DateFrom}")" aria-label="Page @Model.TotalPages" @(Model.CurrentPage == Model.TotalPages ? "aria-current=\"page\"" : "")>@Model.TotalPages</a>
         </li>
     </ul>
 
     @if (Model.CurrentPage < Model.TotalPages)
     {
         <div class="govuk-pagination__next">
-            <a class="govuk-link govuk-pagination__link" href="@Url.Action(Model.ControllerName, new { PageNumber = Model.CurrentPage + 1 , Keyword = Model.Keyword, Status = Model.Status})" rel="next">
+            <a class="govuk-link govuk-pagination__link" href="@Url.Action(Model.ControllerName, new { PageNumber = Model.CurrentPage + 1 , Keyword = Model.Keyword, Status = Model.Status})@(Model.DateFrom == null ? "" : $"&DateRange.DateFrom={Model.DateFrom}")" rel="next">
                 <span class="govuk-pagination__link-title">
                     Next<span class="govuk-visually-hidden"> page</span>
                 </span>
