Update to incorrect title on landing page and add a missing character to govuk layout

--- a/CheckYourEligibility-Parent/Views/Home/Index.cshtml
+++ b/CheckYourEligibility-Parent/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 @using Microsoft.AspNetCore.Http.Extensions
 @{
     Layout = "~/Views/Shared/_Layout_StartNow.cshtml";
-    ViewData["Title"] = "Dashboard";
+    ViewData["Title"] = "Check if your children can get free school meals";
     // var url = UriHelper.GetDisplayUrl(HttpContextAccessor.HttpContext.Request);
     // url = url.Replace("as", "as-admin");
 }
@@ -12,9 +12,7 @@
     <main class="govuk-main-wrapper " id="main-content" role="main">
         <div class="govuk-grid-row">
             <div class="govuk-grid-column-two-thirds">
-                <h1 class="govuk-heading-xl">
-                    Check if your children can get free school meals
-                </h1>
+                <h1 class="govuk-heading-xl">@ViewData["Title"]</h1>
             </div>
         </div>
         <div class="govuk-grid-row">
