--- a/CheckYourEligibility-Parent/Views/Shared/_Layout_StartNow.cshtml
+++ b/CheckYourEligibility-Parent/Views/Shared/_Layout_StartNow.cshtml
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
-    <title>@ViewData["Title"] Check and apply for school and childcare support - GOV.UK</title>
+    <title>@ViewData["Title"] - Check and apply for school and childcare support - GOV.UK</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link href="~/css/govuk-frontend.min.css" rel="stylesheet" />
     <link href="~/css/application.css" rel="stylesheet" />
