alteration to form clearing since form is now a get

--- a/CheckYourEligibility-Admin/Views/Application/SearchResults.cshtml
+++ b/CheckYourEligibility-Admin/Views/Application/SearchResults.cshtml
@@ -107,7 +107,7 @@
                                     </div>
                                     <div class="moj-filter__heading-action">
                                         <p>
-                                            <a class="govuk-link govuk-link--no-visited-state" href="" onclick="this.form.reset()">Clear filters</a>
+                                            <a class="govuk-link govuk-link--no-visited-state" href="/Application/SearchResults">Clear filters</a>
                                         </p>
                                     </div>
                                 </div>
