--- a/CheckYourEligibility-Parent/Views/Shared/_Layout.cshtml
+++ b/CheckYourEligibility-Parent/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
 </head>
 
 <body class="govuk-template__body" data-clarity="@Configuration["Clarity:Parent"]">
-    <div id="cookie-banner" class="govuk-cookie-banner" role="region" aria-label="Cookies on Check a family's eligibility" data-nosnippet style="display:none;">
+    <div id="cookie-banner" class="govuk-cookie-banner cookie-hidden" role="region" aria-label="Cookies on Check a family's eligibility" data-nosnippet>
         <div class="govuk-cookie-banner__message govuk-width-container">
             <div class="govuk-grid-row">
                 <div class="govuk-grid-column-two-thirds">
@@ -167,7 +167,6 @@
 
 
     <script type="module" src="~/js/javascript-starter.js"></script>
-    <script src="~/js/cookie-utils.js"></script>
 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
