--- a/CheckYourEligibility-Parent/Views/Shared/_Layout_StartNow.cshtml
+++ b/CheckYourEligibility-Parent/Views/Shared/_Layout_StartNow.cshtml
@@ -12,6 +12,26 @@
 </head>
 
 <body class="govuk-template__body js-enabled" data-clarity="@Configuration["Clarity:Parent"]">
+    <div id="cookie-banner" class="govuk-cookie-banner cookie-hidden" role="region" aria-label="Cookies on Check a family's eligibility" data-nosnippet>
+        <div class="govuk-cookie-banner__message govuk-width-container">
+            <div class="govuk-grid-row">
+                <div class="govuk-grid-column-two-thirds">
+                    <h2 class="govuk-cookie-banner__heading govuk-heading-m">Cookies on check a family's eligibility</h2>
+                    <div class="govuk-cookie-banner__content">
+                        <p class="govuk-body">We use some essential cookies to make this website work.</p>
+                        <p class="govuk-body">We'd like to use analytics cookies so we can understand how you use the service and make improvements.</p>
+                    </div>
+                </div>
+            </div>
+
+            <button class="govuk-button" type="button" id="accept-cookies" data-module="govuk-button">
+                Accept analytics cookies
+            </button>
+            <button class="govuk-button govuk-button--secondary" type="button" id="reject-cookies" data-module="govuk-button">
+                Reject analytics cookies
+            </button>
+        </div>
+    </div>
     <header class="govuk-header " role="banner" data-module="govuk-header">
         <div class="govuk-header__container govuk-width-container">
             <div class="govuk-header__logo">
