--- a/CheckYourEligibility-Admin/Views/Shared/_Layout.cshtml
+++ b/CheckYourEligibility-Admin/Views/Shared/_Layout.cshtml
@@ -27,6 +27,26 @@
 </head>
 
 <body class="govuk-template__body  js-enabled" data-clarity="@clarityId">
+    <div id="cookie-banner" class="govuk-cookie-banner cookie-hidden" role="region" aria-label="Cookies on Check a family's eligibility" data-nosnippet>
+        <div class="govuk-cookie-banner__message govuk-width-container">
+            <div class="govuk-grid-row">
+                <div class="govuk-grid-column-two-thirds">
+                    <h2 class="govuk-cookie-banner__heading govuk-heading-m">Cookies on check a family's eligibility</h2>
+                    <div class="govuk-cookie-banner__content">
+                        <p class="govuk-body">We use some essential cookies to make this website work.</p>
+                        <p class="govuk-body">We'd like to use analytics cookies so we can understand how you use the service and make improvements.</p>
+                    </div>
+                </div>
+            </div>
+
+            <button class="govuk-button" type="button" id="accept-cookies" data-module="govuk-button">
+                Accept analytics cookies
+            </button>
+            <button class="govuk-button govuk-button--secondary" type="button" id="reject-cookies" data-module="govuk-button">
+                Reject analytics cookies
+            </button>
+        </div>
+    </div>
     <a href="#main-content" class="govuk-skip-link" data-module="govuk-skip-link">Skip to main content</a>
 
     <header class="dfe-header" role="banner">
@@ -43,8 +63,8 @@
             <div class="dfe-header__content" id="content-header">
                 <ul class="dfe-header__action-links">
                     @* <li>
-                    <a href="#">My account</a>
-                    </li> *@
+                        <a href="#">My account</a>
+                        </li> *@
                     <li>
                         @Html.ActionLink("Sign out", "SignOut", "Account", null, new { @class = "signOut" })
                     </li>
@@ -123,9 +143,9 @@
                             <a class="govuk-footer__link" href="@Url.Action("Privacy", "Home")">Privacy policy</a>
                         </li>
                         @*
-                        <li class="govuk-footer__inline-list-item">
-                        <a class="govuk-footer__link" href="@Url.Action("Accessibility", "Home")">Accessibility</a>
-                        </li> *@
+                            <li class="govuk-footer__inline-list-item">
+                            <a class="govuk-footer__link" href="@Url.Action("Accessibility", "Home")">Accessibility</a>
+                            </li> *@
 
                         <li class="govuk-footer__inline-list-item">
                             <a class="govuk-footer__link" href="@Url.Action("Cookies", "Home")">Cookies</a>
