--- a/CheckYourEligibility-Admin/wwwroot/css/application.css
+++ b/CheckYourEligibility-Admin/wwwroot/css/application.css
@@ -2759,7 +2759,7 @@ p + .govuk-heading-s,
   background-color: #f3f2f1;
 }
 
-.govuk-cookie-banner[hidden] {
+.govuk-cookie-banner[hidden], div.cookie-hidden {
   display: none;
 }
 
