--- a/CheckYourEligibility-Admin/Views/Check/Enter_Child_Details.cshtml
+++ b/CheckYourEligibility-Admin/Views/Check/Enter_Child_Details.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewData["Title"] = "Provide details of all children";
-    ViewData["Layout"] = "two_thirds";
+    ViewData["Layout"] = "one_half";
     var childIndex = TempData["childIndex"] as int?;
 }
 
@@ -25,12 +25,12 @@
         <div id="childNumber@(@i)">
             <fieldset class="govuk-fieldset moj-add-another__item">
                 <legend class="govuk-fieldset__legend moj-add-another__title govuk-fieldset__legend--m">
-                    Child @(@i + 1) details
+                    Child @(@i + 1)
                 </legend>
 
                 @if (i > 0){
-                <button asp-controller="Check" asp-action="Remove_Child" asp-route-index="@i" class="govuk-button govuk-button--secondary moj-add-another__add-button govuk-!-margin-bottom-4 delete-button" data-module="govuk-button">
-                    Remove Child @(i + 1)
+                <button asp-controller="Check" asp-action="Remove_Child" asp-route-index="@i" class="govuk-button govuk-button--secondary moj-add-another__remove-button" data-module="govuk-button">
+                    Remove
                 </button>
                 }
 
@@ -44,10 +44,10 @@
 
                      @if (childIndex ==i)
                         {
-                            <input asp-for="ChildList[i].FirstName" id="ChildList[@i].FirstName" class="govuk-input govuk-!-width-two-thirds @(ViewData.ModelState[$"ChildList[{@i}].FirstName"]?.Errors.Count > 0 ? "govuk-input--error" : "")" type="text" aria-label="First name" autofocus/>
+                            <input asp-for="ChildList[i].FirstName" id="ChildList[@i].FirstName" class="govuk-input @(ViewData.ModelState[$"ChildList[{@i}].FirstName"]?.Errors.Count > 0 ? "govuk-input--error" : "")" type="text" aria-label="First name" autofocus/>
                         } else 
                         {
-                           <input asp-for="ChildList[i].FirstName" id="ChildList[@i].FirstName" class="govuk-input govuk-!-width-two-thirds @(ViewData.ModelState[$"ChildList[{@i}].FirstName"]?.Errors.Count > 0 ? "govuk-input--error" : "")" type="text" aria-label="First name"/>
+                           <input asp-for="ChildList[i].FirstName" id="ChildList[@i].FirstName" class="govuk-input @(ViewData.ModelState[$"ChildList[{@i}].FirstName"]?.Errors.Count > 0 ? "govuk-input--error" : "")" type="text" aria-label="First name"/>
                         }
                 </div>
 
@@ -58,7 +58,7 @@
                     <p class="govuk-error-message">
                         <span asp-validation-for="ChildList[i].LastName"></span>
                     </p>
-                    <input asp-for="ChildList[i].LastName" id="ChildList[@i].LastName" class="govuk-input govuk-!-width-two-thirds @(ViewData.ModelState[$"ChildList[{@i}].LastName"]?.Errors.Count > 0 ? "govuk-input--error" : "")" type="text">
+                    <input asp-for="ChildList[i].LastName" id="ChildList[@i].LastName" class="govuk-input @(ViewData.ModelState[$"ChildList[{@i}].LastName"]?.Errors.Count > 0 ? "govuk-input--error" : "")" type="text">
                 </div>
 
                 <div class="govuk-form-group" data-type="dob-form-group">
