Changes to some text on child details, move the 'remove' button for additional children and add the new layout size as a layout option.

--- a/CheckYourEligibility-Parent/Views/Shared/_Layout.cshtml
+++ b/CheckYourEligibility-Parent/Views/Shared/_Layout.cshtml
@@ -104,6 +104,12 @@
                         @RenderBody()
                     </div>
                 }
+                else if (ViewData["Layout"] != null && ViewData["Layout"].ToString() == "one_half")
+                {
+                    <div class="govuk-grid-column-one-half">
+                        @RenderBody()
+                    </div>
+                }
                 else //Default - ViewData["Layout"].ToString() == "full"
                 {
                     <div class="govuk-grid-column-full">
