--- a/CheckYourEligibility-Parent/Views/Check/Enter_Child_Details.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Enter_Child_Details.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewData["Title"] = "Add details of your children";
-    ViewData["Layout"] = "two_thirds";
+    ViewData["Layout"] = "one_half";
     var childIndex = TempData["childIndex"] as int?;
     var validationMessage = TempData["ValidationMessage"] as string;
  }
@@ -35,7 +35,7 @@
 
 <h1 class="govuk-heading-l" tabindex="-1">@ViewData["Title"]</h1>
 
-<p>Include all children who are in compulsory education..</p>
+<p>Include all children who are in compulsory education.</p>
 
 <form asp-controller="Check" asp-action="Enter_Child_Details" method="post" novalidate>
 
@@ -46,14 +46,15 @@
         <div id="childNumber@(@i)">
         <fieldset class="govuk-fieldset moj-add-another__item">
             <legend class="govuk-fieldset__legend moj-add-another__title govuk-fieldset__legend--m">
-                Child @(@i + 1) details
+                Child @(@i + 1)
             </legend>
 
-            @if (i > 0){
-            <button asp-controller="Check" asp-action="Remove_Child" asp-route-index="@i" class="govuk-button govuk-button--secondary moj-add-another__add-button govuk-!-margin-bottom-4 delete-button" data-module="govuk-button">
-                Remove Child @(i + 1)
-            </button>
-            }
+                @if (i > 0)
+                {
+                    <button asp-controller="Check" asp-action="Remove_Child" asp-route-index="@i" class="govuk-button govuk-button--secondary moj-add-another__remove-button" data-module="govuk-button">
+                        Remove
+                    </button>
+                }
 
             <div class="govuk-form-group">
                 <label class="govuk-label govuk-!-font-weight-bold" for="ChildList[@i].FirstName">
@@ -65,10 +66,10 @@
                    
                     @if (childIndex == i)
                     {
-                        <input asp-for="ChildList[i].FirstName" id="ChildList[@i].FirstName" class="govuk-input govuk-!-width-two-thirds @(ViewData.ModelState[$"ChildList[{@i}].FirstName"]?.Errors.Count > 0 ? "govuk-input--error" : "")" type="text" aria-label="First name" autofocus/>
+                        <input asp-for="ChildList[i].FirstName" id="ChildList[@i].FirstName" class="govuk-input @(ViewData.ModelState[$"ChildList[{@i}].FirstName"]?.Errors.Count > 0 ? "govuk-input--error" : "")" type="text" aria-label="First name" autofocus/>
                     } else 
                     {
-                       <input asp-for="ChildList[i].FirstName" id="ChildList[@i].FirstName" class="govuk-input govuk-!-width-two-thirds @(ViewData.ModelState[$"ChildList[{@i}].FirstName"]?.Errors.Count > 0 ? "govuk-input--error" : "")" type="text" aria-label="First name"/>
+                       <input asp-for="ChildList[i].FirstName" id="ChildList[@i].FirstName" class="govuk-input @(ViewData.ModelState[$"ChildList[{@i}].FirstName"]?.Errors.Count > 0 ? "govuk-input--error" : "")" type="text" aria-label="First name"/>
                     }
             </div>
 
@@ -79,7 +80,7 @@
                 <p class="govuk-error-message">
                     <span asp-validation-for="ChildList[i].LastName"></span>
                 </p>
-                <input asp-for="ChildList[i].LastName" id="ChildList[@i].LastName" class="govuk-input govuk-!-width-two-thirds @(ViewData.ModelState[$"ChildList[{@i}].LastName"]?.Errors.Count > 0 ? "govuk-input--error" : "")" type="text" aria-label="Last Name">
+                <input asp-for="ChildList[i].LastName" id="ChildList[@i].LastName" class="govuk-input @(ViewData.ModelState[$"ChildList[{@i}].LastName"]?.Errors.Count > 0 ? "govuk-input--error" : "")" type="text" aria-label="Last Name">
             </div>
 
             <div class="govuk-form-group">
@@ -96,7 +97,7 @@
                         <span asp-validation-for="ChildList[i].School.URN"></span>
                     </p>
                         <input id="ChildList[@i].School"
-                               class="noJsRemove govuk-search school-search govuk-input govuk-!-width-two-thirds @(ViewData.ModelState[$"ChildList[{@i}].School.URN"]?.Errors.Count > 0 ? "govuk-input--error" : "")"
+                               class="noJsRemove govuk-search school-search govuk-input @(ViewData.ModelState[$"ChildList[{@i}].School.URN"]?.Errors.Count > 0 ? "govuk-input--error" : "")"
                                value="@(Model.ChildList[i].School != null && !String.IsNullOrEmpty(Model.ChildList[i].School.URN) ? string.Join(", ", new[] { Model.ChildList[i].School.Name, Model.ChildList[i].School.URN, Model.ChildList[i].School.Postcode, Model.ChildList[i].School.LA }) : "")"
                                type="text"
                                autocomplete="off"
@@ -108,7 +109,7 @@
                     <label class="govuk-label govuk-!-font-weight-bold noJsShow" for="ChildList[@i].School.URN">
                         School Unique Reference Number (URN)
                     </label>
-                    <input asp-for="ChildList[i].School.URN" id="ChildList[@i].School.URN" class="noJsShow govuk-search govuk-input govuk-!-width-two-thirds" aria-label="School" />
+                    <input asp-for="ChildList[i].School.URN" id="ChildList[@i].School.URN" class="noJsShow govuk-search govuk-input" aria-label="School" />
                     <input hidden asp-for="ChildList[i].School.Postcode" id="ChildList[@i].School.Postcode" />
                     <input hidden asp-for="ChildList[i].School.LA" id="ChildList[@i].School.LA" />
                     <ul id="schoolList@(@i)" class="govuk-!-width-two-thirds"></ul>
